# mdformat-nix-alejandra

./: .gitignore  README.md  flake.nix  pyproject.toml
mdformat_nix_alejandra/: __init__.py
nix/: shell.nix
tests/: test_mdformat_nix_alejandra.py
tests/data/: fixtures.md
