[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
name = "mdformat-nix-alejandra"
version = "0.1.0"
description = "Mdformat plugin to format Nix code blocks with alejandra"
authors = ["Aldo Borrero <82811+aldoborrero@users.noreply.github.com>"]
license = "MIT"
classifiers = [
  "Topic :: Documentation",
  "Topic :: Text Processing :: Markup",
  "Intended Audience :: Developers",
  "Development Status :: 3 - Alpha",
  "Programming Language :: Python :: 3.10",
]
keywords = ["mdformat", "markdown", "commonmark", "formatter"]
readme = "README.md"
packages = [{ include = "mdformat_nix_alejandra" }]

[tool.poetry.dependencies]
python = "^3.10"
mdformat = "^0.7.16"

[tool.poetry.dev-dependencies]
pytest = "*"
pytest-mock = "*"
pytest-randomly = "*"

[tool.poetry.plugins."mdformat.codeformatter"]
"nix" = "mdformat_nix_alejandra:format_nix"

[tool.isort]
# Force imports to be sorted by module, independent of import type
force_sort_within_sections = true

# Group first party and local folder imports together
no_lines_before = ["LOCALFOLDER"]

# Configure isort to work without access to site-packages
known_first_party = ["mdformat_nix_alejandra", "tests"]

# Settings for Black compatibility
profile = "black"